--- a/css/style.css
+++ b/css/style.css
@@ -59,7 +59,7 @@ p {
 }
 
 a {
-    text-decoration: none;
+    text-decoration: brown;
     line-height: inherit;
     -webkit-transition: opacity 0.3s ease-out;
     -moz-transition: opacity 0.3s ease-out;
