added a style in content center

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ section {
     max-width: 1245px;
     margin: 0 auto;
     padding: 75px 0;
-    position: relative;
+    position: center;
 }
 
 .no-padding-bottom .row, .no-padding-bottom div, .no-padding-bottom.row {
